# word-player

./: .gitignore  Cargo.toml  TODO.md  download-wordlist.ps1  goal.md  ollama-ps.ps1  resize-captures.ps1
crates/bevy_math_utils/: Cargo.toml
crates/bevy_math_utils/src/: lib.rs  neg_y.rs  rect_expand.rs  rect_extents.rs  rect_in_rect.rs  rect_with_properties.rs
crates/grid-ocr/: Cargo.toml  lib.rs  main.rs
crates/pee/: Cargo.toml  capture.ps1  update.ps1
crates/pee/src/: args.rs  main.rs  tracing_setup.rs
crates/piss/: Cargo.toml  run.ps1
crates/piss/src/: args.rs  main.rs  prompts.md
crates/screencap/: Cargo.toml  lib.rs  main.rs
crates/urine/: Cargo.toml  README.md  cursor_position_plugin.rs  dimmer_plugin.rs  exit_on_esc.rs  lib.rs  main.rs  prompt_draw_plugin.rs  region_selection_overlay_plugin.rs  region_selection_plugin.rs  region_selection_return_plugin.rs  run-debug.ps1  run.ps1  setup_windows.rs  update.ps1  world_cursor_plugin.rs  world_cursor_text_plugin.rs  world_inspector_plugin.rs
crates/word-suggest/: Cargo.toml  lib.rs  main.rs
crates/word_player_shared/: Cargo.toml
crates/word_player_shared/src/: lib.rs
