[workspace]
members = [
    "crates/urine",
    "crates/screencap",
    "crates/grid-ocr",
    "crates/word-suggest",
    "crates/word_player_shared"
]
resolver = "2"

[workspace.package]
authors = ["TeamDman"]
repository = "https://github.com/TeamDman/word-player.git"
edition = "2024"
license = "MPL-2.0"
version = "0.1.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
strip = true      # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
