[package]
name = "grid-ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ollama-rs = { path = "d:/Repos/ollama-rs/ollama-rs" }
word_player_shared = { path = "../word_player_shared" }

[lib]
path = "lib.rs"

[[bin]]
name = "grid-ocr"
path = "main.rs"
