[package]
name = "urine"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bevy = { version = "0.16.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
word_player_shared = { path = "../word_player_shared" }
bevy-inspector-egui = "0.31.0"

[lib]
path = "lib.rs"

[[bin]]
name = "urine"
path = "main.rs"
