[package]
name = "urine"
description = "User Region Identification and Naming Exosystem"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bevy = { version = "0.16.0" }
serde_json = "1"
word_player_shared = { path = "../word_player_shared" }
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"
bevy_embedded_assets = "0.13.0"
color-eyre = "0.6.5"
bevy_math_utils = { path = "../bevy_math_utils" }

[lib]
path = "lib.rs"

[[bin]]
name = "urine"
path = "main.rs"
